--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap');
+
+:root{
+    --primary-white: #fff;
+    --primary-orange: #f9ab00;
+    --primary-dark: rgba(255, 255, 255,0);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.logo {
+    width:13rem
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+nav a.nav-link {
+    /*font-weight: 500;*/
+    letter-spacing: 0.0375rem;
+    cursor:pointer;
+    text-transform: uppercase;
+    color: var(--primary-white) !important;
+    margin-left: 0.75rem;
+    margin-right: 0.75rem;
+    border-top: 0.1875rem solid var(--primary-dark)
 }
 
-.App-link {
-  color: #61dafb;
+.navbar-brand{
+    max-width: 14rem;
+    padding: 0 !important;
+    height: 7rem !important;
 }
+.navbar-nav > a.active, .navbar-nav > a.active:focus{
+    border-top: 0.1875rem solid var(--primary-orange)
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.navbar-nav > a:hover{
+    border-top: 0.1875rem solid var(--primary-orange)
+
 }
